[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Alexandre0904 <alexandreaugustosan93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"
psycopg2-binary = "^2.9.2"
whitenoise = "^5.3.0"
gitpython = "^3.1.37"
autopep8 = "^1.6.0"
flake8 = "^7.0.0"
isort = "^5.10.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"